tests/ui/option_not_sized.stderr
error[E0277]: the size for values of type `(dyn Debug + 'static)` cannot be known at compilation time
 --> tests/ui/option_not_sized.rs:2:14
  |
2 |     const _: cxx::RustOption::<&dyn core::fmt::Debug> = cxx::RustOption::<&dyn core::fmt::Debug>::new();
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
  |
  = help: the trait `Sized` is not implemented for `(dyn Debug + 'static)`
help: the following other types implement trait `cxx::rust_option::OptionTarget`
 --> src/rust_option.rs
  |
  | impl<T: Sized> OptionTarget for &T {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&T`
...
  | impl<T: Sized> OptionTarget for &mut T {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&mut T`
...
  | impl<T: Sized> OptionTarget for Pin<&mut T> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pin<&mut T>`
...
  | impl<T: Sized> OptionTarget for Box<T> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Box<T>`
  = note: required for `&'static (dyn Debug + 'static)` to implement `cxx::rust_option::OptionTarget`
note: required by a bound in `RustOption`
 --> src/rust_option.rs
  |
  | pub struct RustOption<T: OptionTarget> {
  |                          ^^^^^^^^^^^^ required by this bound in `RustOption`

error[E0277]: the size for values of type `(dyn Debug + 'static)` cannot be known at compilation time
 --> tests/ui/option_not_sized.rs:2:57
  |
2 |     const _: cxx::RustOption::<&dyn core::fmt::Debug> = cxx::RustOption::<&dyn core::fmt::Debug>::new();
  |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
  |
  = help: the trait `Sized` is not implemented for `(dyn Debug + 'static)`
help: the following other types implement trait `cxx::rust_option::OptionTarget`
 --> src/rust_option.rs
  |
  | impl<T: Sized> OptionTarget for &T {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&T`
...
  | impl<T: Sized> OptionTarget for &mut T {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&mut T`
...
  | impl<T: Sized> OptionTarget for Pin<&mut T> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pin<&mut T>`
...
  | impl<T: Sized> OptionTarget for Box<T> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Box<T>`
  = note: required for `&'static (dyn Debug + 'static)` to implement `cxx::rust_option::OptionTarget`
note: required by a bound in `RustOption`
 --> src/rust_option.rs
  |
  | pub struct RustOption<T: OptionTarget> {
  |                          ^^^^^^^^^^^^ required by this bound in `RustOption`

error[E0277]: the size for values of type `dyn Debug` cannot be known at compilation time
 --> tests/ui/option_not_sized.rs:2:57
  |
2 |     const _: cxx::RustOption::<&dyn core::fmt::Debug> = cxx::RustOption::<&dyn core::fmt::Debug>::new();
  |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
  |
  = help: the trait `Sized` is not implemented for `dyn Debug`
help: the following other types implement trait `cxx::rust_option::OptionTarget`
 --> src/rust_option.rs
  |
  | impl<T: Sized> OptionTarget for &T {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&T`
...
  | impl<T: Sized> OptionTarget for &mut T {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&mut T`
...
  | impl<T: Sized> OptionTarget for Pin<&mut T> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pin<&mut T>`
...
  | impl<T: Sized> OptionTarget for Box<T> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Box<T>`
  = note: required for `&dyn Debug` to implement `cxx::rust_option::OptionTarget`
note: required by a bound in `RustOption`
 --> src/rust_option.rs
  |
  | pub struct RustOption<T: OptionTarget> {
  |                          ^^^^^^^^^^^^ required by this bound in `RustOption`

error[E0599]: the associated function or constant `new` exists for struct `RustOption<&dyn Debug>`, but its trait bounds were not satisfied
 --> tests/ui/option_not_sized.rs:2:99
  |
2 |     const _: cxx::RustOption::<&dyn core::fmt::Debug> = cxx::RustOption::<&dyn core::fmt::Debug>::new();
  |                                                                                                   ^^^ associated function or constant cannot be called on `RustOption<&dyn Debug>` due to unsatisfied trait bounds
  |
 ::: $RUST/core/src/fmt/mod.rs
  |
  | pub trait Debug: PointeeSized {
  | ----------------------------- doesn't satisfy `dyn Debug: Sized`
  |
  = note: the following trait bounds were not satisfied:
          `dyn Debug: Sized`
          which is required by `&dyn Debug: cxx::rust_option::OptionTarget`
